<resources>
    <string name="app_name">bikepoint</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="booking_a_service">Booking a Service</string>
    <string name="bike_number">Bike number</string>
    <string name="book_service">Book service</string>
    <string name="service">Service</string>
    <string name="service_history">Service History</string>
    <string name="bookings">Bookings</string>
    <string name="update_bookings">Update Bookings</string>
    <string name="home">Home</string>
    <string name="admin_page">Admin Page</string>
    <string name="update_service">Update service</string>
    <string name="add">Add</string>
    <string name="checkout">Checkout</string>
    <string name="view_basket">View Basket</string>
    <string name="remove">Remove</string>
    <string name="pls">+</string>
    <string name="mins">-</string>
    <string name="generate_pdf">Generate PDF</string>
</resources>